--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "description": "Pencil.js plugin to edit images",
     "main": "src/index.js",
+    "files": ["src"],
     "publishConfig": {
         "access": "public"
     },
