--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "@pencil.js/image-manipulation",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Pencil.js plugin to edit images",
     "main": "src/index.js",
-    "files": ["src"],
+    "files": [
+        "src"
+    ],
     "publishConfig": {
         "access": "public"
     },
